part4/408/manifests/base/backend-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: todo-backend-rollout
spec:
  replicas: 2
  strategy:
    canary:
      steps:
      - setWeight: 50
      - pause:
          duration: 30s
      - setWeight: 100
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: BACKEND/IMAGE
          resources:
            limits:
              cpu: "200m"
              memory: "612Mi"
          readinessProbe:
            httpGet:
              path: /healthcheck
              port: 3001
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 3001
